# voting_systems

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yaml  dockerfile
backend/: Cargo.toml
backend/src/: anti_plurality.rs  approval.rs  borda_count.rs  condorcet_method.rs  cumulative.rs  db.rs  elections.rs  main.rs  majority_judgment.rs  preferential_voting.rs  quota_preferential_vic_labor_2024.rs  schema.rs  score.rs  single_non_transferable_vote.rs  single_party.rs  single_transferable_vote.rs  star.rs  three_two_one.rs  usual_judgment.rs
backend/src/routes/: auth.rs  mod.rs  web.rs
backend/src/routes/api/: anti_plurality_voting.rs  approval_voting.rs  borda_count_voting.rs  common.rs  condorcet_method_voting.rs  cumulative.rs  majority_judgment_voting.rs  mod.rs  preferential_voting.rs  quota_preferential_vic_labor_2024.rs  score_voting.rs  single_non_transferable_voting.rs  single_party_voting.rs  single_transferable_vote.rs  star_voting.rs  three_two_one_vote.rs  usual_judgment_voting.rs
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  backend.ts  main.ts  utils.ts
migrations/2023-04-26-212513_preferential_voting/: down.sql  up.sql
migrations/2023-04-28-002126_single_transferable_vote/: down.sql  up.sql
migrations/2023-05-05-014114_approval_voting/: down.sql  up.sql
src/: anti_plurality.rs  approval.rs  borda_count.rs  condorcet_method.rs  cumulative.rs  elections.rs  main.rs  majority_judgment.rs  models.rs  preferential_voting.rs  schema.rs  score.rs  single_non_transferable_vote.rs  single_transferable_vote.rs  star.rs  three_two_one.rs  usual_judgment.rs
src/routes/: web.rs
systems/: Cargo.toml
systems/src/: lib.rs  quota_preferential_vic_labor_2024.rs  single_non_transferable_vote.rs
(+139 files in other folders)
