[workspace]
resolver = "2"
members = ["backend", "systems"]

default-members = ["backend"]


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "z"
debug = false

[profile.release-dev]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = false

[profile.release-lto]
inherits = "release"
lto = true
