[package]
name = "voting-systems-site-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.9.0"
actix-web-validator = "5.0.1"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.4", features = [
    "postgres",
    "r2d2",
    "uuid",
    "extras",
    "chrono",
] }
enum-primitive-derive = "0.2.2"
env_logger = "0.11.5"
futures-util = "0.3.28"
kv = { version = "0.24.0", features = ["json-value"] }
lazy_static = "1.4.0"
log = "0.4.17"
num-traits = "0.2.15"
paste = "1.0.12"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
serde = "1.0.160"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
voting-systems = { path = "../systems" }
